# todo-reward

./: .gitignore  CLAUDE.md  LICENSE  docker-compose.yml
.claude/: settings.json
.claude/commands/: evening.md  morning.md
.claude/hooks/: guard-md-only.js  post-edit-check.js  session-context.js
app/: App.tsx  package-lock.json  package.json
app/src/: api.ts  storage.ts  theme.ts
app/src/components/: AvatarStage.native.tsx  AvatarStage.tsx  AvatarStage.web.tsx  AvatarView.tsx  Button.tsx  MissionCard.tsx  PointPop.tsx  ProgressRing.tsx  WalletChip.tsx  (+2 more)
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 29ad3da1c7d0_daily_bonus_log_mission_points.py  52ebf0c5fbb2_initial_schema.py  a547e05f9f1f_shop_items_asset_ref.py
backend/app/: main.py  seed.py  seed_shop.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: __init__.py  badge.py  coin.py  points.py  shop.py  todo.py  user.py
backend/app/routers/: admin.py  admin_todos.py  auth.py  coins.py  internal.py  me.py  shop.py  todos.py
backend/app/schemas/: auth.py  coin.py  shop.py  todo.py
backend/app/services/: day_boundary.py  day_close.py  points.py  settlement.py  shop.py  toggle.py  users.py
backend/tests/: conftest.py  test_auth.py  test_day_boundary.py  test_day_close.py  test_health.py  test_settlement.py  test_shop.py  test_toggle.py
docs/: SETUP.md  SPEC.md  TECH_DESIGN.md
docs/research/: avatar-3d-research.md  item-catalog-plan.md
docs/worklog/: 2026-07-03.md  2026-07-04.md  BACKLOG.md  TEMPLATE.md
(+7 files in other folders)
