[project]
name = "todo-reward-backend"
version = "0.1.0"
description = "데일리 TODO 리워드 앱 백엔드 (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E,F 기본 + I(import 정렬) + UP(pyupgrade) + B(버그 유발 패턴)
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 의존성 주입 관용구 — 기본값에서의 Depends/Query 등 호출은 정상이므로 B008 예외.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Security",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
